# work-dashboard

./: .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json
scripts/: generate_icon.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  calendar_helper.swift  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/common/: GitHubConnect.tsx  OutlookConnect.tsx  PanelCard.tsx  SlackConnect.tsx
src/components/layout/: Dashboard.tsx  Header.tsx
src/components/panels/: DeploymentTracker.tsx  FocusBar.tsx  MyMeetings.tsx  MyWork.tsx  ReplatformMonitor.tsx  Settings.tsx  TeamPulse.tsx
src/hooks/: useAutoRefresh.ts  useConfig.ts  useGithub.ts  useJira.ts  useNextAction.ts  useOutlook.ts  useSlack.ts  useTodos.ts
src/services/: config.ts  github.ts  githubAuth.ts  jira.ts  outlook.ts  outlookAuth.ts  slack.ts  slackAuth.ts
src/types/: index.ts
